Made just ONE fix to the alignment of the exhibition experience page

--- a/app/globals.css
+++ b/app/globals.css
@@ -3575,7 +3575,6 @@ h6 {
 
 .exhibition__experience-caption {
   font-weight: 300;
-  max-width: 500px;
   font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
